[package]
name = "liquityBot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "1.0.2", features = ["abigen", "ethers-solc", "legacy", "rustls", "ws"] }
ethers-flashbots = "0.12.1"
eyre = "0.6.8"
serde_json = "1.0.91"
tokio = { version =  "1.24.0", features = ["full", "macros"] }
url = "2.3.1"
